--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,13 @@ a{
   color: set-text-color($secondary-color);
   text-decoration: none;
 }
+
+.progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 10px;
+  background: var(--red);
+  transform-origin: 0%;
+}
